# athena.prototype

./: .dockerignore  AGENTS.md  ATHENA_README.md  CODE_STANDARDS.md  Dockerfile  PLAN.md  README.md  athena.yml  docker-compose.yml  instructions.txt  pyproject.toml  run.sh  stop.sh
.opencode/agents/: reviewer.md  safety.md
agents/: orchestrator.yml
agents/planning/: leader.yml  network_planner.yml  web_planner.yml
agents/recon/: apache_expert.yml  leader.yml  network_scout.yml  rest_expert.yml  ssh_expert.yml
agents/reporting/: findings_analyst.yml  leader.yml  risk_assessor.yml
agents/retrieval/: db_specialist.yml  leader.yml  web_retriever.yml
artifacts/40315801-3141-47eb-964a-3df32b3330fb/: approval.json  recon.json
artifacts/8a93a366-b5dd-4e8b-b31e-20024ef16700/: approval.json
db/: init.sql
src/athena/: __init__.py  agent_loop.py  artifacts.py  config.py  logging_setup.py  main.py  model_backend.py  orchestrator.py  schemas.py  tools.py  utils.py
src/athena/committees/: planning.py  recon.py  reporting.py  retrieval.py
tests/: test_agent_loop.py  test_artifacts.py  test_config.py  test_model_backend.py  test_orchestrator.py  test_planning_committee.py  test_recon_committee.py  test_reporting_committee.py  test_retrieval_committee.py  test_tools.py  test_utils.py
