[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "athena-prototype"
version = "0.1.0"
description = "Proof-of-concept agent committee pipeline."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40,<1",
    "psycopg2-binary>=2.9,<3",
    "pydantic>=2.7,<3",
    "pyyaml>=6.0,<7",
]

[project.optional-dependencies]
dev = [
    "black>=24.0,<25",
    "pytest>=8.0,<9",
    "ruff>=0.5,<1",
]

[project.scripts]
athena = "athena.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/athena"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
